# lip

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
basics/adder/: .ocamlinit  README.md  dune-project
basics/contextfree/: README.md  dune-project
basics/helloworld/: dune-project
basics/recognizer/: README.md  dune-project
basics/tugofwar/: README.md  dune-project
contextfree/: .ocamlinit  README.md
contextfree/lib/: dune  exercises.ml  grammar.ml  types.ml
contextfree/test/: dune  test_contextfree.ml
expr/: Makefile
expr/andboolexpr/: .ocamlinit  README.md  andboolexpr.opam  dune-project
expr/andboolexpr/lib/: ast.ml
expr/andboolexpr/src/: dune  lexer.mll  main.ml  parser.mly
expr/andboolexpr/test/: andboolexpr.ml  dune
expr/arithexpr/: .ocamlinit  README.md  dune-project
expr/boolexpr/: .ocamlinit  README.md  boolexpr.opam  dune-project
expr/boolexpr/lib/: ast.ml  main.ml  parser.mly
expr/boolexpr/src/: ast.ml  lexer.mll  main.ml
expr/boolexpr/test/: boolexpr.ml  dune
expr/letarithexpr/: .ocamlinit  README.md  dune-project
expr/sarithexpr/: .ocamlinit  README.md  dune-project
expr/uarithexpr/: .ocamlinit  README.md  dune-project
expr/varboolexpr/: .ocamlinit  README.md  dune-project
imp/: Makefile
imp/blocks/: README.md  dune-project
imp/fun/: README.md  dune-project
imp/fun/lib/: ast.ml  dune  prettyprint.ml  types.ml
imp/fun/test/: dune  fact  fun.ml  fun1  fun2  fun3  fun4
imp/lip23/: .ocamlformat  README.md  dune-project
imp/while/: README.md  dune-project
install-ocaml/: README.md
lambda/church/: .ocamlinit  README.md  dune-project
lambda/simplytyped/: .ocamlinit  README.md  dune-project
lambda/untyped/: .ocamlinit  README.md  dune-project
life/: README.md
life/lib/: life.ml  main.ml
lip24/: .ocamlformat  README.md  common.ml  test_parser.ml  test_trace.ml
lip24/examples/: 01-print.rs  02-intError.rs  03-intOk.rs  04-stringError.rs  06-scopeOk.rs  07-scopeError.rs  08-func.rs  10-ifThenElse.rs  12-lendFnError.rs  14-borrowFun.rs  15-borrowError.rs  16-borrowMut.rs  17-borrowMutError.rs  18-loop.rs  18-loopBreak.rs  21-funExpr.rs  23-scopeCheck.rs
ocaml-basics/absolute-value/: abs_bart.ml  absolute-value.ml
ocaml-basics/alt-even/: README.md  alt-even_bart.ml
ocaml-basics/binary-search-tree/: binary-search-tree.ml
ocaml-basics/cumlaude/: cumlaude_bart.ml
ocaml-basics/dup/: dup.ml  (+2 more)
setup-git/: README.md
toylexer/: .ocamlinit  README.md  dune-project
toyparser/: README.md
tutorials/: README.md
untyped-expr/boolexpr/: README.md  dune-project
untyped-expr/boolexpr/src/: dune
untyped-expr/boolexpr/test/: boolexpr.ml  dune
(+162 files in other folders)
