(lang dune 3.4)

(name andboolexpr)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "Massimo Bartoletti")

(maintainers "Massimo Bartoletti")

(license LICENSE)

(documentation https://github.com/bitbart/lip/tree/main/expr/andboolexpr)

(package
 (name andboolexpr)
 (synopsis "Interpreter of boolean expressions with not,and,or")
 (description "The interpreter implements small-step and big-step semantics of boolean expressions with not,and,or")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

(using menhir 2.1)

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
